--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,9 +1,10 @@
 server.port=8081
 
-# Database connection - pcfdev
-spring.datasource.url=jdbc:mysql://localhost:3306/ntpartner?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=dbuser
-spring.datasource.password=dbuser
+spring.datasource.url: jdbc:mysql://${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/${OPENSHIFT_APP_NAME}
+spring.datasource.username: ${OPENSHIFT_MYSQL_DB_USERNAME}
+spring.datasource.password: ${OPENSHIFT_MYSQL_DB_PASSWORD}
+
+
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
