--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 server.port=8081
 
+# RabbitMq connection
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.virtual-host=${RABBITMQ_VHOST}
+spring.rabbitmq.username=${RABBITMQ_USER}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+
 # Database connection - pcfdev
-spring.datasource.url=jdbc:mysql://localhost:3306/ntpartner?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=dbuser
-spring.datasource.password=dbuser
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${MYSQL_DATABASE}?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
