WIP: Deployment descriptors for dcos/marathon

--- a/deploy/docker-compose/docker-compose-infra.yml
+++ b/deploy/docker-compose/docker-compose-infra.yml
@@ -6,7 +6,7 @@ services:
     image: mysql:5.7
     labels:
       de.nt.cloud.group: ntpartner
-      de.nt.cloud.name: ntpartner-backend
+      de.nt.cloud.name: ntpartner-mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: ntpartner
@@ -19,11 +19,13 @@ services:
     image: rabbitmq:3.6-management
     labels:
       de.nt.cloud.group: ntpartner
-      de.nt.cloud.name: ntpartner-backend
+      de.nt.cloud.name: ntpartner-rabbitmq
     environment:
       RABBITMQ_DEFAULT_USER: mquser
       RABBITMQ_DEFAULT_PASS: mquser
       RABBITMQ_DEFAULT_VHOST: ntpartner
+    volumes:
+      - /var/lib/rabbitmq
 
 networks:
   default:
