--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.4.14</version>
+                <version>1.0.0</version>
                 <executions>
                     <execution>
                         <id>build-image-service</id>
@@ -196,4 +196,115 @@
             </plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>docker-push</id>
+			<activation>
+				<property>
+					<name>dockerRegistry</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.spotify</groupId>
+						<artifactId>docker-maven-plugin</artifactId>
+						<version>1.0.0</version>
+						<executions>
+							<execution>
+								<id>tag-image-service-version</id>
+								<phase>package</phase>
+								<goals>
+									<goal>tag</goal>
+								</goals>
+								<configuration>
+									<image>${project.groupId}/${project.artifactId}:${project.version}</image>
+									<newName>${dockerRegistry}/${project.groupId}/${project.artifactId}:${project.version}</newName>
+									<forceTags>true</forceTags>
+								</configuration>
+							</execution>
+							<execution>
+								<id>tag-image-service-latest</id>
+								<phase>package</phase>
+								<goals>
+									<goal>tag</goal>
+								</goals>
+								<configuration>
+									<image>${project.groupId}/${project.artifactId}:latest</image>
+									<newName>${dockerRegistry}/${project.groupId}/${project.artifactId}:latest</newName>
+									<forceTags>true</forceTags>
+								</configuration>
+							</execution>
+							<execution>
+								<id>tag-image-setup-mysql-version</id>
+								<phase>package</phase>
+								<goals>
+									<goal>tag</goal>
+								</goals>
+								<configuration>
+									<image>${project.groupId}/${project.artifactId}.setup-mysql:${project.version}</image>
+									<newName>${dockerRegistry}/${project.groupId}/${project.artifactId}.setup-mysql:${project.version}</newName>
+									<forceTags>true</forceTags>
+								</configuration>
+							</execution>
+							<execution>
+								<id>tag-image-setup-mysql-latest</id>
+								<phase>package</phase>
+								<goals>
+									<goal>tag</goal>
+								</goals>
+								<configuration>
+									<image>${project.groupId}/${project.artifactId}.setup-mysql:latest</image>
+									<newName>${dockerRegistry}/${project.groupId}/${project.artifactId}.setup-mysql:latest</newName>
+									<forceTags>true</forceTags>
+								</configuration>
+							</execution>
+
+							<execution>
+								<id>push-image-service-version</id>
+								<phase>install</phase>
+								<goals>
+									<goal>push</goal>
+								</goals>
+								<configuration>
+									<imageName>${dockerRegistry}/${project.groupId}/${project.artifactId}:${project.version}</imageName>
+								</configuration>
+							</execution>
+							<execution>
+								<id>push-image-service-latest</id>
+								<phase>install</phase>
+								<goals>
+									<goal>push</goal>
+								</goals>
+								<configuration>
+									<imageName>${dockerRegistry}/${project.groupId}/${project.artifactId}:latest</imageName>
+								</configuration>
+							</execution>
+							<execution>
+								<id>push-image-setup-mysql-version</id>
+								<phase>install</phase>
+								<goals>
+									<goal>push</goal>
+								</goals>
+								<configuration>
+									<imageName>${dockerRegistry}/${project.groupId}/${project.artifactId}.setup-mysql:${project.version}</imageName>
+								</configuration>
+							</execution>
+							<execution>
+								<id>push-image-setup-mysql-latest</id>
+								<phase>install</phase>
+								<goals>
+									<goal>push</goal>
+								</goals>
+								<configuration>
+									<imageName>${dockerRegistry}/${project.groupId}/${project.artifactId}.setup-mysql:latest</imageName>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
