--- a/src/main/docker/setup-mysql/Dockerfile
+++ b/src/main/docker/setup-mysql/Dockerfile
@@ -1,7 +1,7 @@
-FROM debian:jessie
+FROM debian:stretch-slim
 
 RUN apt-get update && apt-get -y install wget \
-    && wget -q -O - https://dev.mysql.com/get/Downloads/MySQL-Shell/mysql-shell-1.0.9-linux-glibc2.12-x86-64bit.tar.gz | tar -xzC / --strip 1 \
+    && wget -q -O - https://dev.mysql.com/get/Downloads/MySQL-Shell/mysql-shell-1.0.10-linux-glibc2.12-x86-64bit.tar.gz | tar -xzC / --strip 1 \
     && apt-get -y remove wget && apt-get -y autoremove && apt-get clean
 
 COPY *.sql /data/
