--- a/pom.xml
+++ b/pom.xml
@@ -3,28 +3,28 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>ntpartner</groupId>
+	<groupId>examples.cloud.ntpartner</groupId>
 	<artifactId>ntpartner-backend</artifactId>
 	<version>${describe}</version>
 	<packaging>jar</packaging>
 
-	<description>Backend of NtPartner</description>
+	<description>NTPartner Backend Cloud</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.M5</version>
+		<version>2.0.0.RELEASE</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.9</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<scm>
-		<url>https://github.com/ueisele/NTPartner.git</url>
-		<connection>scm:git:git@github.com:ueisele/NTPartner.git</connection>
-		<developerConnection>scm:git:git@github.com:ueisele/NTPartner.git</developerConnection>
+		<url>https://github.com/ueisele/examples-cloud-ntpartner.git</url>
+		<connection>scm:git:git@github.com:ueisele/examples-cloud-ntpartner.git</connection>
+		<developerConnection>scm:git:git@github.com:ueisele/examples-cloud-ntpartner.git</developerConnection>
 		<tag>${project.version}</tag>
 	</scm>
 
